// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestPlugin Emulator builds a url for emulator proxy via webpack 1`] = `
{
  "endpoint": "http://localhost/proxy",
  "headers": {
    "x-ms-proxy-target": "http://localhost",
  },
  "path": "/dbs/foo",
}
`;

exports[`requestPlugin Hosted builds a proxy URL in development 1`] = `
{
  "endpoint": "http://localhost/proxy",
  "headers": {
    "x-ms-proxy-target": "baz",
  },
  "path": "/dbs/foo",
}
`;
